[gd_scene load_steps=3 format=2]

[ext_resource path="res://script/Confirm.gd" type="Script" id=1]
[ext_resource path="res://assets/font/Godot-Fontpack-d244bf6170b399a6d4d26a0d906058ddf2dafdf1/fonts/montreal/Montreal.tres" type="DynamicFont" id=2]

[node name="Confirmation" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="WindowDialog" type="WindowDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -128.5
margin_top = -57.0
margin_right = 128.5
margin_bottom = 57.0
window_title = "Save Game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button_yes" type="Button" parent="WindowDialog"]
margin_left = 41.0
margin_top = 40.0
margin_right = 128.0
margin_bottom = 60.0
text = "Yes"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button_no" type="Button" parent="WindowDialog"]
margin_left = 138.0
margin_top = 39.0
margin_right = 219.0
margin_bottom = 59.0
text = "Cancel"

[node name="Press_anouncement" type="Label" parent="."]
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = -166.122
margin_top = 492.923
margin_right = 200.878
margin_bottom = 532.923
custom_fonts/font = ExtResource( 2 )
text = "Press \"E\" to save game"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="WindowDialog/Button_yes" to="." method="_on_Button_yes_pressed"]
[connection signal="pressed" from="WindowDialog/Button_no" to="." method="_on_Button_no_pressed"]
